--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Worper</title>
+    <title>worper</title>
     <style>
       body,
       html {
